Log In page added

--- a/assignment1/pizzaProject/pizzaApp/templates/dashboard.html
+++ b/assignment1/pizzaProject/pizzaApp/templates/dashboard.html
@@ -7,4 +7,5 @@
 {% block content %}
     <h1>Welcome to the dashboard</h1>
     <!-- <p>Please sign in to order and create your pizza</p> -->
+     <a href="{% url 'user-logout' %}">Log Out Now</a>
 {% endblock %}
