--- a/assignment1/pizzaProject/pizzaApp/templates/register.html
+++ b/assignment1/pizzaProject/pizzaApp/templates/register.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="d-flex justify-content-center align-items-center full-height">
-        <div class="card border-lite" style="min-width: 20rem; margin-top: 2rem;">
+        <div class="card border-lite" style="min-width: 20rem; margin-top: 2rem; background-color: #93B5C6;">
                 <div class="card-body">
                     <h4 class="card-title">Create account now to start your pizza journey</h4>
                     <form method="POST" autocomplete="off">
