--- a/assignment1/pizzaProject/pizzaApp/templates/base.html
+++ b/assignment1/pizzaProject/pizzaApp/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
@@ -14,29 +15,30 @@
                 background-color: #f8f9fa;
                 min-height: 100vh;
                 padding-bottom: 5%;
+                font-family: "Poppins", sans-serif;
             }
         </style>
     </head>
     <body>
       <!-- Nav bar for all pages -->
-      <nav class="navbar d-flex align-items-center" style="background-color: #e28743; padding: 0.5rem 1rem;">
+      <nav class="navbar d-flex align-items-center" style="padding: 0.5rem 1rem; background-color: #FFB100;">
         <div class="d-flex align-items-center">
-          <img src="{% static 'images/pizza.png' %}" width="40" height="40" alt="Logo">  <h3> Pizza World </h3>
+          <img src="{% static 'images/pizza.png' %}" width="40" height="40" alt="Logo" style="margin-right: 2rem;">  <h3> Pizza World </h3>
         </div>
         <div class="ms-auto d-flex align-items-center">
           <!-- Buttons on the nav bar will change depending on if the user is logged in or not -->
           {% if user.is_authenticated %}
-            <a class="btn btn-warning" href="{% url 'dashboard' %}">View Orders</a>
-            <a class="btn btn-danger mx-2" href="{% url 'order' %}">Order Now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+            <a class="btn btn-info" href="{% url 'dashboard' %}">View Orders</a>
+            <a class="btn btn-success mx-2" href="{% url 'order' %}">Order Now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
               <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
             </svg></a>
-            <a class="btn btn-warning" href="{% url 'user-logout' %}">Log Out <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <a class="btn btn-danger" href="{% url 'user-logout' %}">Log Out <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
               <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
             </svg></a>
           {% else %}
-            <a class="btn btn-outline-light mx-2" href="{% url 'register' %}">Sign Up</a>
-            <a class="btn btn-outline-light" href="{% url 'my-login' %}">Log In</a>
+            <a class="btn btn-success" href="{% url 'register' %}">Sign Up</a>
+            <a class="btn btn-success mx-2" href="{% url 'my-login' %}">Log In</a>
           {% endif %}
         </div>
       </nav>
@@ -58,9 +60,10 @@
 
         <!-- Footer for all the pages -->
         <footer class="navbar fixed-bottom bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">&#169; Heather</a>
-            </div>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">&#169; Pizza World</a>
+          </div>
+        </footer>
           </footer>
 
 
