--- a/assignment1/pizzaProject/pizzaApp/templates/payment.html
+++ b/assignment1/pizzaProject/pizzaApp/templates/payment.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    Pizza Party Pay Now
+    Pizza World | Pay Now
 {% endblock %}
 
 {% block content %}
